--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "echo 'Skipping linting...'",
+    "deploy": "react-scripts build && gh-pages -d build"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
