--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "echo 'Skipping linting...'",
-    "deploy": "react-scripts build && gh-pages -d build"
+    "deploy": "CI=false npm run build && gh-pages -d build"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
