--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.5.2",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "firebase": "^11.5.0",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.483.0",
@@ -41,10 +44,12 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.1",
     "sharp": "^0.33.5",
     "sonner": "^2.0.1",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
     "vaul": "^1.1.2",
